--- a/Day3/Navbar.css
+++ b/Day3/Navbar.css
@@ -1,5 +1,9 @@
 .fcontainer {
     display : flex ;
+    flex-direction: row;
+    width:100vw;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .fitem {
